--- a/src/scss/theme.scss
+++ b/src/scss/theme.scss
@@ -332,24 +332,27 @@ $grid-breakpoint-has-push: ($small, $medium-up);
 
 /*================ Color Variables ================*/
 
+$primary: #361a0f;
+$orange: #ed8246;
+
 // Text colors
-$color-text: #361a0f;
+$color-text: $primary;
 $color-text-shadow: rgba(0, 0, 0, 0.4);
 $color-body-text: #69727b;
 $color-sale-text: #3bb912;
 $color-small-button-text-border: #3d4246;
 $color-text-field: #fff;
 $color-text-field-text: #000;
-$color-navigation-text: #361a0f;
+$color-navigation-text: $primary;
 
 // Button colors
-$color-btn-primary: #361a0f;
+$color-btn-primary: $primary;
 $color-btn-primary-text: #fff;
 
 // Hover and focus states
-$color-text-focus: adaptiveColor(#361a0f, 33.12);
+$color-text-focus: adaptiveColor($primary, 33.12);
 $color-overlay-text-focus: adaptiveColor(#fff, 255);
-$color-btn-primary-focus: adaptiveColor(#361a0f, 33.12);
+$color-btn-primary-focus: adaptiveColor($primary, 33.12);
 $color-btn-social-focus: adaptiveColor(#e8e9eb, 232.93);
 $color-small-button-text-border-focus: adaptiveColor(#3d4246, 64.96);
 
@@ -387,7 +390,7 @@ $color-success-bg: #f8fff9;
 $light-blue: #ebf4f5;
 $teal-dark: #3b6c72;
 $teal: #02a6b8;
-$orange: #de3618;
+// $orange: #de3618;
 
 // Forms
 $color-form-text: #333;
@@ -541,7 +544,7 @@ input[type='number'] {
   -moz-appearance: textfield;
 }
 
-@import url('https://fonts.googleapis.com/css2?family=Work+Sans:wght@400;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Work+Sans:wght@400;500;600;700&display=swap');
 
 $font-weight-body--bold: 700;
 $font-weight-body--bolder: 700;
@@ -883,6 +886,9 @@ $slick-opacity-not-active: 0.25;
 
 body {
   margin: 0;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  text-rendering: optimizeLegibility;
   // background-image: url(//cdn.shopify.com/s/files/1/0049/9990/5350/t/13/assets/celandine.svg?v=6147753096086402810);
   // background-repeat: no-repeat;
   // background-position: right bottom;
@@ -992,6 +998,10 @@ input {
     -webkit-appearance: none;
     -moz-appearance: none;
   }
+}
+
+input[type='number'] {
+  -moz-appearance: textfield;
 }
 
 table {
@@ -2137,6 +2147,20 @@ a[href^='tel'] {
     color: $color-small-button-text-border-focus;
     border-color: $color-small-button-text-border-focus;
   }
+}
+
+.btn-link {
+  padding: 0;
+  background-color: transparent;
+  text-decoration: underline;
+  color: $primary;
+  font-weight: normal;
+  border: none;
+  font-size: 13px;
+}
+
+.btn-block {
+  display: block;
 }
 
 /*================ Button variations ================*/
@@ -3564,7 +3588,7 @@ $color-blankstate-background: rgba($color-body-text, 0.1);
 .product__price,
 .featured-product__price {
   font-size: 1.25em;
-  color: #361a0f;
+  color: $primary;
 }
 
 .selector-wrapper {
@@ -3702,14 +3726,14 @@ $color-blankstate-background: rgba($color-body-text, 0.1);
   white-space: normal;
   margin-top: 0;
   min-height: 44px;
-  background-color: #ed8246;
+  background-color: $orange;
   color: #3a1707;
   @include media-query($medium-up) {
     padding-left: 30px;
     padding-right: 30px;
   }
   &:hover {
-    background-color: darken(#ed8246, 10%) !important;
+    background-color: darken($orange, 10%) !important;
     color: #3a1707 !important;
   }
 
@@ -3722,6 +3746,51 @@ $color-blankstate-background: rgba($color-body-text, 0.1);
   .product-form__item--payment-button & {
     margin-top: 10px;
   }
+}
+
+.cart-error {
+  color: #842029;
+  background-color: #f8d7da;
+  border: 1px solid #f5c2c7;
+  padding: 1rem;
+  margin-top: 10px;
+  animation: shakeX 1000ms;
+  p {
+    color: #842029;
+    font-weight: bold;
+    margin-bottom: 5px;
+  }
+  .close-btn {
+    background-color: transparent;
+    border: none;
+    color: #842029;
+  }
+}
+
+@keyframes shakeX {
+  from,
+  to {
+    transform: translate3d(0, 0, 0);
+  }
+
+  10%,
+  30%,
+  50%,
+  70%,
+  90% {
+    transform: translate3d(-5px, 0, 0);
+  }
+
+  20%,
+  40%,
+  60%,
+  80% {
+    transform: translate3d(5px, 0, 0);
+  }
+}
+
+.shakeX {
+  animation-name: shakeX;
 }
 
 .shopify-payment-button {
@@ -4309,7 +4378,7 @@ $color-blankstate-background: rgba($color-body-text, 0.1);
 }
 
 .additional-checkout-buttons {
-  margin-top: $gutter-site-mobile;
+  // margin-top: $gutter-site-mobile;
 
   // reset for paypal button
   input[type='image'] {
@@ -4325,7 +4394,7 @@ $color-blankstate-background: rgba($color-body-text, 0.1);
 
 .dynamic-checkout__content {
   ul {
-    justify-content: flex-end;
+    justify-content: center;
   }
 }
 
@@ -4479,6 +4548,11 @@ $color-blankstate-background: rgba($color-body-text, 0.1);
   @include visually-hidden();
 }
 
+.site-header__cart {
+  background: transparent;
+  border: none;
+}
+
 .site-header__cart-title {
   margin-right: 3px;
 }
@@ -4491,8 +4565,8 @@ $color-blankstate-background: rgba($color-body-text, 0.1);
   right: 0.4rem;
   top: 0.2rem;
   font-weight: bold;
-  background-color: $color-btn-primary;
-  color: $color-btn-primary-text;
+  background-color: $orange;
+  color: $primary;
   border-radius: 50%;
   min-width: 1em;
   height: 1em;
@@ -5169,7 +5243,7 @@ $nav-button-padding: 15px;
 }
 
 .site-header__mobile-nav {
-  z-index: 999;
+  z-index: 100;
   position: relative;
   background-color: $color-body;
 
@@ -7416,7 +7490,7 @@ $toolbar-height-small: 46px;
   }
   .cbb-also-bought-add-to-cart-button {
     position: relative;
-    border: 1px solid #361a0f !important;
+    border: 1px solid $primary !important;
     @include media-query($medium-up) {
       &:before {
         content: '';
@@ -7514,4 +7588,412 @@ $toolbar-height-small: 46px;
       padding-bottom: 10px;
     }
   }
+}
+
+// Cart Drawer
+
+body.cart-open {
+  overflow: hidden;
+}
+
+.close-cart-button {
+  position: fixed;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  border: none;
+  z-index: 100;
+}
+
+.cart-drawer__header {
+  padding: 1rem 1.5rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  border-bottom: 1px solid #ddd;
+}
+
+.cart-drawer__close {
+  margin: 0;
+  padding: 0;
+  border: none;
+  background-color: transparent;
+  cursor: pointer;
+  background-image: url("data:image/svg+xml,%0A%3Csvg width='15px' height='16px' viewBox='0 0 15 16' version='1.1' xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink'%3E%3Cg id='Page-1' stroke='none' stroke-width='1' fill='none' fill-rule='evenodd'%3E%3Cg id='2.-Menu' transform='translate(-15.000000, -13.000000)' stroke='%23000000'%3E%3Cg id='Group' transform='translate(15.000000, 13.521000)'%3E%3Cpath d='M0,0.479000129 L15,14.2971819' id='Path-3'%3E%3C/path%3E%3Cpath d='M0,14.7761821 L15,-1.24344979e-14' id='Path-3'%3E%3C/path%3E%3C/g%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
+  width: 15px;
+  height: 15px;
+}
+
+.cart-drawer__wrapper {
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  height: 100%;
+  width: 100%;
+  max-width: 500px;
+  z-index: 9999;
+  overflow: auto;
+  transition: transform 0.3s;
+  will-change: transform;
+  background-color: #fff;
+  display: flex;
+  flex-direction: column;
+  -webkit-transform: translateX(103%);
+  transform: translateX(103%); /* extra 3% because of box-shadow */
+  -webkit-overflow-scrolling: touch; /* enables momentum scrolling in iOS overflow elements */
+  box-shadow: 0 2px 6px #777;
+}
+
+.cart-drawer__content {
+  position: relative;
+  overflow-x: hidden;
+  overflow-y: auto;
+  height: 100%;
+  flex-grow: 1;
+  // padding: 1.5rem;
+}
+
+.cart-drawer.is-active {
+  display: block;
+}
+
+.cart-drawer.is-visible .cart-drawer__wrapper {
+  -webkit-transform: translateX(0);
+  transform: translateX(0);
+}
+
+.cart-drawer.is-visible .cart-drawer__overlay {
+  opacity: 0.5;
+}
+
+.cart-drawer__overlay {
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  z-index: 200;
+  opacity: 0;
+  transition: opacity 0.3s;
+  will-change: opacity;
+  background-color: #000;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
+.cart-drawer__product-title {
+  font-size: 15px;
+  margin-bottom: 5px;
+  a {
+    text-decoration: underline;
+  }
+}
+
+.cart-items-wrapper {
+  position: relative;
+  padding: 1rem 1.5rem;
+}
+
+.cart-stepper {
+  border: 1px solid #000;
+  display: inline-block;
+  button {
+    background-color: transparent;
+    border: none;
+    padding: 2px 12px;
+  }
+  span {
+    font-size: 13px;
+  }
+}
+
+.cart-recommendations {
+  background-color: $light-blue;
+  padding: 1.5rem;
+  min-height: 300px;
+}
+
+.cart-recommendations__row {
+  margin-left: -5px;
+  margin-right: -5px;
+}
+
+.cart-recommendations__item {
+  width: calc(100% / 3);
+  padding-left: 5px;
+  padding-right: 5px;
+}
+
+.cart-notes {
+  padding: 1rem 1.5rem;
+  .btn-link {
+    text-transform: none;
+    font-weight: 500;
+    letter-spacing: 0;
+    text-decoration: none;
+    &:hover,
+    &:focus {
+      color: $primary;
+      text-decoration: underline;
+      background-color: transparent;
+    }
+  }
+  .icon {
+    width: 12px;
+  }
+}
+
+.cart-actions {
+  padding: 1rem 1.5rem;
+  @include media-query($small) {
+    padding: 1rem 1.5rem 2rem 1.5rem;
+  }
+  .btn-checkout {
+    background-color: $orange;
+    color: $primary;
+  }
+}
+
+.additional-checkout-buttons {
+  p {
+    margin-bottom: 0;
+  }
+}
+
+// Loading Spinner
+
+.loading-spinner {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(255, 255, 255, 0.8);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.sk-fading-circle {
+  margin: auto;
+  width: 40px;
+  height: 40px;
+  position: relative;
+}
+
+.sk-fading-circle .sk-circle {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  left: 0;
+  top: 0;
+}
+
+.sk-fading-circle .sk-circle:before {
+  content: '';
+  display: block;
+  margin: 0 auto;
+  width: 15%;
+  height: 15%;
+  background-color: $primary;
+  border-radius: 100%;
+  -webkit-animation: sk-circleFadeDelay 1.2s infinite ease-in-out both;
+  animation: sk-circleFadeDelay 1.2s infinite ease-in-out both;
+}
+.sk-fading-circle .sk-circle2 {
+  -webkit-transform: rotate(30deg);
+  -ms-transform: rotate(30deg);
+  transform: rotate(30deg);
+}
+.sk-fading-circle .sk-circle3 {
+  -webkit-transform: rotate(60deg);
+  -ms-transform: rotate(60deg);
+  transform: rotate(60deg);
+}
+.sk-fading-circle .sk-circle4 {
+  -webkit-transform: rotate(90deg);
+  -ms-transform: rotate(90deg);
+  transform: rotate(90deg);
+}
+.sk-fading-circle .sk-circle5 {
+  -webkit-transform: rotate(120deg);
+  -ms-transform: rotate(120deg);
+  transform: rotate(120deg);
+}
+.sk-fading-circle .sk-circle6 {
+  -webkit-transform: rotate(150deg);
+  -ms-transform: rotate(150deg);
+  transform: rotate(150deg);
+}
+.sk-fading-circle .sk-circle7 {
+  -webkit-transform: rotate(180deg);
+  -ms-transform: rotate(180deg);
+  transform: rotate(180deg);
+}
+.sk-fading-circle .sk-circle8 {
+  -webkit-transform: rotate(210deg);
+  -ms-transform: rotate(210deg);
+  transform: rotate(210deg);
+}
+.sk-fading-circle .sk-circle9 {
+  -webkit-transform: rotate(240deg);
+  -ms-transform: rotate(240deg);
+  transform: rotate(240deg);
+}
+.sk-fading-circle .sk-circle10 {
+  -webkit-transform: rotate(270deg);
+  -ms-transform: rotate(270deg);
+  transform: rotate(270deg);
+}
+.sk-fading-circle .sk-circle11 {
+  -webkit-transform: rotate(300deg);
+  -ms-transform: rotate(300deg);
+  transform: rotate(300deg);
+}
+.sk-fading-circle .sk-circle12 {
+  -webkit-transform: rotate(330deg);
+  -ms-transform: rotate(330deg);
+  transform: rotate(330deg);
+}
+.sk-fading-circle .sk-circle2:before {
+  -webkit-animation-delay: -1.1s;
+  animation-delay: -1.1s;
+}
+.sk-fading-circle .sk-circle3:before {
+  -webkit-animation-delay: -1s;
+  animation-delay: -1s;
+}
+.sk-fading-circle .sk-circle4:before {
+  -webkit-animation-delay: -0.9s;
+  animation-delay: -0.9s;
+}
+.sk-fading-circle .sk-circle5:before {
+  -webkit-animation-delay: -0.8s;
+  animation-delay: -0.8s;
+}
+.sk-fading-circle .sk-circle6:before {
+  -webkit-animation-delay: -0.7s;
+  animation-delay: -0.7s;
+}
+.sk-fading-circle .sk-circle7:before {
+  -webkit-animation-delay: -0.6s;
+  animation-delay: -0.6s;
+}
+.sk-fading-circle .sk-circle8:before {
+  -webkit-animation-delay: -0.5s;
+  animation-delay: -0.5s;
+}
+.sk-fading-circle .sk-circle9:before {
+  -webkit-animation-delay: -0.4s;
+  animation-delay: -0.4s;
+}
+.sk-fading-circle .sk-circle10:before {
+  -webkit-animation-delay: -0.3s;
+  animation-delay: -0.3s;
+}
+.sk-fading-circle .sk-circle11:before {
+  -webkit-animation-delay: -0.2s;
+  animation-delay: -0.2s;
+}
+.sk-fading-circle .sk-circle12:before {
+  -webkit-animation-delay: -0.1s;
+  animation-delay: -0.1s;
+}
+
+@-webkit-keyframes sk-circleFadeDelay {
+  0%,
+  39%,
+  100% {
+    opacity: 0;
+  }
+  40% {
+    opacity: 1;
+  }
+}
+
+@keyframes sk-circleFadeDelay {
+  0%,
+  39%,
+  100% {
+    opacity: 0;
+  }
+  40% {
+    opacity: 1;
+  }
+}
+
+// Progress Bar
+$progress-height: 8px;
+$progress-bg: #e9ecef;
+$progress-border-radius: $border-radius;
+$progress-box-shadow: inset 0 1px 2px rgba(#000, 0.075);
+$progress-bar-color: #fff;
+$progress-bar-bg: $orange;
+$progress-bar-animation-timing: 1s linear infinite;
+$progress-bar-transition: width 0.6s ease;
+
+.progress {
+  display: flex;
+  height: $progress-height;
+  overflow: hidden; // force rounded corners by cropping it
+  background-color: $progress-bg;
+  border-radius: 10px;
+  max-width: 320px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.progress-bar {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  overflow: hidden;
+  color: $progress-bar-color;
+  text-align: center;
+  white-space: nowrap;
+  background-color: $progress-bar-bg;
+}
+
+// Spinner
+
+$spinner-width: 2rem;
+$spinner-height: $spinner-width;
+$spinner-vertical-align: -0.125em;
+$spinner-border-width: 0.25em;
+$spinner-animation-speed: 0.75s;
+
+$spinner-width-sm: 1rem;
+$spinner-height-sm: $spinner-width-sm;
+$spinner-border-width-sm: 0.2em;
+
+@keyframes spinner-border {
+  to {
+    transform: rotate(360deg);
+  }
+}
+
+.spinner-border {
+  display: inline-block;
+  width: $spinner-width;
+  height: $spinner-height;
+  vertical-align: $spinner-vertical-align;
+  border: $spinner-border-width solid currentColor;
+  border-right-color: transparent;
+  // stylelint-disable-next-line property-disallowed-list
+  border-radius: 50%;
+  animation: $spinner-animation-speed linear infinite spinner-border;
+}
+
+.spinner-border-sm {
+  width: $spinner-width-sm;
+  height: $spinner-height-sm;
+  border-width: $spinner-border-width-sm;
 }
