Email when back in stock css

--- a/sections/product-template.liquid
+++ b/sections/product-template.liquid
@@ -153,7 +153,7 @@
                 {% render 'product-price', variant: current_variant %}
               </div>
             </div>
-            {% unless current.variant %}
+            {% unless current_variant.available %}
               <p class="mb-1">{{ product.metafields.my_fields.out_of_stock_message.value }}</p>
             {% endunless %}
             {% unless product.has_only_default_variant %}
@@ -187,12 +187,14 @@
             
             <div class="quantity-add-wrapper">
               {% if section.settings.show_quantity_selector %}
-                <div class="product-form__item product-form__item--quantity">
-                  <label for="Quantity-{{ section.id }}">{{ 'products.product.quantity' | t }}</label>
-                  <button :disabled="quantity == 1" type="button" class="btn btn--link d-none d-sm-inline" @click="quantity--" >-</button>
-                  <input type="number" id="Quantity-{{ section.id }}" v-model="quantity" min="1" class="product-form__input" pattern="[0-9]*">
-                  <button type="button" class="btn btn--link d-none d-sm-inline" @click="quantity++"  >+</button>
-                </div>
+                {% if current_variant.available %}
+                  <div class="product-form__item product-form__item--quantity">
+                    <label for="Quantity-{{ section.id }}">{{ 'products.product.quantity' | t }}</label>
+                    <button :disabled="quantity == 1" type="button" class="btn btn--link d-none d-sm-inline" @click="quantity--" >-</button>
+                    <input type="number" id="Quantity-{{ section.id }}" v-model="quantity" min="1" class="product-form__input" pattern="[0-9]*">
+                    <button type="button" class="btn btn--link d-none d-sm-inline" @click="quantity++"  >+</button>
+                  </div>
+                {% endif %}
               {% endif %}
               <div class="product-form__item product-form__item--submit{% if section.settings.enable_payment_button %} product-form__item--payment-button{% endif %}{% if product.has_only_default_variant %} product-form__item--no-variants{% endif %}">
                 <button @click.prevent="handleAddToCart(current_variant_id, quantity)" type="submit" name="add" id="AddToCart-{{ section.id }}" {% unless current_variant.available %}disabled="disabled"{% endunless %} class="btn product-form__cart-submit{% if section.settings.enable_payment_button %} btn--secondary-accent{% endif %}">
